# autoortho

./: .gitignore  404.html  Makefile  README.md  autoortho.spec  build_pyinstaller.py  buildreqs.sh  index.html  installer.nsi  latest  mkdocs.yml  nuitka-package.config.yml  pyproject.toml  requirements-build.in  requirements-build.txt  requirements.in  requirements.txt  versions.json
.claude/: settings.local.json
.github/workflows/: ReleaseSharedWorkflow2.yml  build.yml  build_aopipeline.yml  build_release.yml  deploy-docs.yml  release.yml  release_candidate.yml  release_stable.yml  test.yml  unstable_build.yml
autoortho/: __main__.py  aoconfig.py  aoseasons.py  aostats.py  autoortho.py  autoortho_fuse.py  config_ui.py  config_ui_qt.py  crash_handler.py  datareftrack.py  downloader.py  flighttrack.py  getortho.py  macfuse_worker.py  macsetup.py  mount_setup.py  mount_worker.py  process_supervisor.py  pydds.py  test_aoconfig.py  test_autoortho.py  test_datareftrack.py  test_downloader.py  test_getortho.py  test_integration_fuse.py  test_pydds.py  test_qt_ui.py  time_exclusion.py  utils.py  version.py  winsetup.py  worker_modes.py
autoortho/aoimage/: AoImage.py  aoimage.c  (+4 more)
config/: index.html
details/: index.html
docs/: cache_performance_analysis.md  config.md  details.md  faq.md  index.md  info.md  performance.md
faq/: index.html
info/: index.html
performance/: index.html
scenery/: index.html
scripts/: fix_macos_quarantine.command
search/: search_index.json
unstable/: 404.html  index.html
v0.8.1-karlrado/: index.html
v0.8.2-karlrado/: 404.html
(+89 files in other folders)
