[tool.poetry]
name = "autoortho4xplane"
version = "2.0.0"
description = "AutoOrtho project for X-plane, the project is a fork ."
authors = []
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.14.*"
flask = "^3.1.2"
flask-socketio = "^5.6.0"
geocoder = "^1.38.1"
packaging = "^26.0"
psutil = "^7.2.1"
pytest = "^9.0.2"
mfusepy = "^3.1.0"
requests = "^2.32.5"
PySide6 = "^6.10.1"
numpy = "^2.4.1"
locust = "^2.43.1"

[tool.poetry.dev-dependencies]
pytest = "9.*"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
